syntax = "proto3";

package product;

option go_package = "./product";

message CreateRequest {
  string Name = 1;
  string Desc = 2;
  uint64 Stock = 3;
  uint64 Amount = 4;
  uint64 Status = 5;
}
message CreateResponse {
  int64 id = 1;
}
// 产品创建

// 产品修改
message UpdateRequest {
  int64 id = 1;
  string Name = 2;
  string Desc = 3;
  uint64 Stock = 4;
  uint64 Amount = 5;
  uint64 Status = 6;
}
message UpdateResponse {
  int64 id = 1;
  string Name = 2;
  string Desc = 3;
  uint64 Stock = 4;
  uint64 Amount = 5;
  uint64 Status = 6;
}
// 产品修改

// 产品删除
message DeleteRequest {
  int64 id = 1;
}
message DeleteResponse {
  string Result =1;
}
// 产品删除

// 产品详情
message DetailRequest {
  int64 id = 1;
}
message DetailResponse {
  int64 id = 1;
  string Name = 2;
  string Desc = 3;
  uint64 Stock = 4;
  uint64 Amount = 5;
  uint64 Status = 6;
}
// 产品详情

service Product {
  rpc Create(CreateRequest) returns(CreateResponse);
  rpc Update(UpdateRequest) returns(UpdateResponse);
  rpc Delete(DeleteRequest) returns(DeleteResponse);
  rpc Detail(DetailRequest) returns(DetailResponse);
}

